<resources>
    <!-- Activity Titles -->
    <string name="app_name">Flag Quiz</string>
    <string name="personal_scoreboard">My Scoreboard</string>
    <string name="login">Log In</string>
    <string name="global_scoreboard">High Scores</string>

    <!-- Quiz Strings -->
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="guesses">guesses</string>
    <string name="guess_country">Guess the Country</string>
    <string name="question">Question</string>
    <string name="correct">correct</string>
    <string name="incorrect">Incorrect!</string>
    <string name="of">of</string>
    <string name="reset_quiz">Reset Quiz</string>

    <!-- Menu Strings -->
    <string name="choices">Select Number of Choices</string>
    <string name="regions">Select Regions</string>
    <string name="user">User Info</string>
    <string name="high_scores">View Global Scoreboard</string>
    <string name="quiz">Back to Quiz</string>
    <string name="logout">Log Out</string>

    <!-- App Settings -->
    <string-array name="regionsList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>

    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>

    <!-- Other Strings -->
    <string name="email_hint">e-mail</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="display_name_title">Enter a Display Name</string>
    <string name="display_name_hint">Your Display Name</string>
    <string name="display_name_autoFill_hint">display name</string>
    <string name="display_name_button">Create Account</string>
    <string name="verify_account_dialog">Verification Link Sent</string>
    <string name="flagImageViewDesc">This ImageView contains the flag to guess.</string>


</resources>
