<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/displayNameDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_name_title"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"/>

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/displayNameDialogTitle"/>

    <EditText
        android:id="@+id/displayNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/display_name_hint"
        android:textAlignment="center"
        android:importantForAutofill="no" />

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/displayNameEditText"/>

    <Button
        android:id="@+id/setDisplayNameButton"
        android:text="@string/display_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space2"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>